--- a/angular_practice_4.html
+++ b/angular_practice_4.html
@@ -13,10 +13,8 @@
   <div ng-controller='StoreController as store'>
     <ul class="list-group"> 
       <li class="list-group-item" ng-repeat="product in store.products"> 
-        <h3>
-          {{product.name}}
-          <em class="pull-right">{{product.price | currency}}</em>
-        </h3>
+        <!-- CUSTOM DIRECTIVES -->
+        <product-title></product-title>
 
         <section ng-controller='PanelController as panel'> 
           <ul class="nav nav-pills">
